Encounter, fixed some spacing

--- a/dnd/layout.css
+++ b/dnd/layout.css
@@ -42,6 +42,7 @@
 .stats {
 	display:grid;
 	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+	background-color: #c9cac8;
 }
 .stats-inner {
 	max-height: 7em;
@@ -49,6 +50,26 @@
 	background-color: white;
 	border: 1px solid black;
 	border-radius: 5px;
+}
+.prof {
+	background: white;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto;
+}
+.inspo {
+	grid-row: 1;
+	border: 1px solid black;
+	max-height: 70px;
+	padding-left: 10px;
+	background-color: white;
+}
+.profiency-bonus {
+	grid-row: 2;
+	border: 1px solid black;
+	max-height: 70px;
+	padding-left: 10px;
+	background-color: white;
 }
 .saving-throws {
 	background: white;
@@ -58,31 +79,25 @@
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
-	margin-bottom: 5px;
-}
-.prof {
-	background: white;
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: auto;
-}
-.inspo {
-	border: 1px solid black;
-	max-height: 70px;
-	padding-left: 10px;
-	background-color: white;
-}
-.inspo {
-	grid-row: 1;
-}
-.profiency-bonus {
-	grid-row: 2;
-	border: 1px solid black;
-	max-height: 70px;
-	padding-left: 10px;
-	background-color: white;
+	margin-bottom: 10px;
 }
 .skills {
+	background: white;
+	border: 1px solid black;
+	padding: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+}
+.enc {
+	display:grid;
+	grid-template-rows: auto;
+	grid-template-columns: 2fr 2fr 2fr;
+	background-color: #c9cac8;
+}
+.enc-ac {
+	grid-row: 1;
+	max-height: 5em;
 	background: white;
 	border: 1px solid black;
 	margin: 1px;
@@ -90,15 +105,77 @@
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
+	margin-bottom: 10px;
 }
-.enc {
-	background-color: purple;
-	color: white;
+.enc-initiative {
+	grid-row: 1;
+	max-height: 5em;
+	background: white;
+	border: 1px solid black;
+	margin-left: 5px;
+	margin-right: 5px;
+	padding: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	margin-bottom: 10px;
+}
+.enc-speed {
+	grid-row: 1;
+	max-height: 5em;
+	background: white;
+	border: 1px solid black;
+	margin: 1px;
+	padding: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	margin-bottom: 10px;
+}
+.current-hp {
+	grid-row: 2;
+	grid-column: 1/6;
+	max-height: 5em;
+	background: white;
+	border: 1px solid black;
+	margin: 1px;
+	padding: 5px;
+	margin-bottom: 10px;
+}
+.temp-hp {
+	grid-row: 3;
+	grid-column: 1/6;
+	max-height: 5em;
+	background: white;
+	border: 1px solid black;
+	margin: 1px;
+	padding: 5px;
+	margin-bottom: 10px;	
+}
+.hit-dice {
+	grid-row: 4;
+	grid-column: 1/3;
+	max-height: 5em;
+	background: white;
+	border: 1px solid black;
+	margin: 1px;
+	padding: 5px;
+	margin-bottom: 10px;
+}
+.death-saves {
+	grid-row: 4;
+	grid-column: 4/6;
+	max-height: 5em;
+	background: white;
+	border: 1px solid black;
+	margin: 1px;
+	padding: 5px;
+	margin-bottom: 10px;
 }
 .pers {
 	grid-column: 4;
 	grid-row: 2/4;
-	background-color: #c9cac8;
+	border: 5px double black;
 }
 .pers-inner {
 	width: 100%;
@@ -106,6 +183,11 @@
 	border: 1px solid black;
 	margin-bottom: 5px;
 }
+.pers-inner:last-child {
+	margin-bottom: 0px;
+	padding-bottom: 30px;
+}
+
 .lang {
 	grid-column: 1/3;
 	grid-row: 3/4;
